--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ langchain = "*"
 black = "*"
 openai = "*"
 langchain-visualizer = "*"
+install = "*"
+tiktoken = "*"
+faiss-cpu = "*"
 
 [dev-packages]
 
